--- a/House Votes.ipynb
+++ b/House Votes.ipynb
@@ -177,7 +177,7 @@
     }
    ],
    "source": [
-    "house = pd.read_csv(\"C:\\\\Users\\\\mayur\\\\OneDrive\\\\Desktop\\\\HouseVotes84.csv\")\n",
+    "house = pd.read_csv(\"HouseVotes84.csv\")\n",
     "house.head()"
    ]
   },
